# github-pages-ssg

./: .gitignore  README.md  init_db.py  interface.py  pyproject.toml  site_config.py
controller/: build.py  site_config.py
db_utils/: posts.py  projects.py
model/db_utils/: init_db.py  posts.py  projects.py
model/entities/: posts.py  projects.py
posts/: add.py  delete.py
projects/: add.py  delete.py
schemas/: posts.sql
src/static_portfolio_generator/: cli.py
src/static_portfolio_generator/controller/: __init__.py  build.py  builder.py  config.py  content.py  contentservice.py  seo_utils.py  site_config.py
src/static_portfolio_generator/model/common/: __init__.py  init_db.py
src/static_portfolio_generator/model/posts/: __init__.py  db_utils.py  entity.py  post.py  posts.sql
src/static_portfolio_generator/model/projects/: __init__.py  db_utils.py  entity.py  projects.sql
src/static_portfolio_generator/view/static/css/: style.css
src/static_portfolio_generator/view/templates/: about.html  base.html  index.html  post.html  posts.html  project.html  projects.html
templates/: about.html  base.html  index.html  posts.html
view/templates/: post.html  project.html
